--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "cookbook-api",
   "version": "1.0.0",
-  "main": "./index.ts",
+  "main": "src/index.ts",
   "author": "Fabio Zapata",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' ./index.ts",
+    "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' ./src/index.ts",
     "lint": "eslint src --ext js,ts",
+    "format": "prettier -c .",
     "test": "jest"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.11",
+    "@types/node": "^17.0.16",
+    "@types/validator": "^13.7.1",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
@@ -34,6 +36,7 @@
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.16.1",
     "swagger-ui-express": "^4.3.0",
     "winston": "^3.4.0"
