--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.17.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "nanoid": "^3.2.0",
     "sequelize": "^6.16.1",
     "swagger-ui-express": "^4.3.0",
     "winston": "^3.4.0"
