--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "stripInternal": true,
-    "types": []
+    "stripInternal": true
   },
-  "include": ["src"]
+  "include": ["src/**/*"]
 }
