--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,16 +3,10 @@
     "browser": true,
     "es2021": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "project": "tsconfig.eslint.json"
+    "ecmaVersion": "latest"
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
