--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' ./src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/",
     "lint": "eslint src --ext js,ts",
     "format": "prettier -c .",
+    "db:create": "npx sequelize-cli --env cookbook db:create",
+    "db:migrate": "npx sequelize-cli --env cookbook db:migrate",
     "test": "jest"
   },
   "devDependencies": {
+    "@baemingo/tscpaths-async": "^0.0.15",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.16",
     "@types/validator": "^13.7.1",
-    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^8.7.0",
@@ -28,17 +32,23 @@
     "prettier": "^2.5.1",
     "sequelize-cli": "^6.4.1",
     "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nanoid": "^3.2.0",
     "sequelize": "^6.16.1",
+    "strip-final-newline": "^3.0.0",
     "swagger-ui-express": "^4.3.0",
     "winston": "^3.4.0"
   }
