--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "noImplicitReturns": true,
     "stripInternal": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "seeders/migrations"]
 }
