--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest"
+    "ecmaVersion": "latest",
+    "project": ["./tsconfig.json"] // Specify it only for TypeScript files
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
@@ -18,6 +19,7 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unsafe-argument": "warn",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "no-console": "warn"
   },
   "overrides": [
