--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ PORT=3000
 USERNAME=root
 PASSWORD=root
 DATABASE=cookbook
-JWT_SECRET=ASDFAÑJLKJRNV34IOPU431NKLTQWERFAS
+JWT_SECRET=asdfasdlfkjwelkñrjqñlkjfñalsdr3rw
 JWT_EXPIRES_IN=86400
+HOST=mysql
